# Rivals-Toolkit

./: .gitattributes  .prettierignore  LICENSE-MIT  README.md  eslint.config.js  index.html  lefthook.yml  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  release.yml  sync-character-ids.yml
scripts/: sync-character-ids.mjs
src/: App.css  App.tsx  main.tsx
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/data/: character_ids.json
src-tauri/icons/: icon.icns
src-tauri/resources/bypass/plugins/: MarvelRivalsUTOCSignatureBypass.asi
src-tauri/src/: audio.rs  commands.rs  concurrency.rs  detect.rs  game_status.rs  game_user_settings.rs  hitsounds.rs  launch_record.rs  lib.rs  main.rs  mods.rs  ogg_to_wav.rs  pak.rs  pak_tweaks.rs  paths.rs  platform.rs  prefs.rs  scalability.rs  settings.rs  sounds.rs  tweaks.rs  update_check.rs  updater.rs  wav_to_wem.rs
src-tauri/src/audio/: ogg.rs  pcm.rs
src-tauri/src/detect/: epic.rs  loading_bay.rs  registry.rs  steam.rs
src-tauri/src/game_user_settings/: commands.rs
src-tauri/src/mods/: bypass.rs  character_sync.rs  commands.rs  conflicts.rs  folder.rs  heroes.rs  paths.rs  profiles.rs  status.rs
src-tauri/src/pak/: commands.rs  crypto.rs  iostore.rs  profile.rs  reader.rs  writer.rs
src-tauri/src/pak/game_rebuild/: extract.rs  mod.rs  rebuild.rs
src-tauri/src/pak_tweaks/: apply.rs  commands.rs  cvars.rs  ini.rs  io.rs  scan.rs
src-tauri/src/scalability/: apply.rs  commands.rs  engine.rs  tweaks.rs
src-tauri/src/tweaks/: catalogue.rs  detect.rs  parser.rs  profiles.rs  shader_cache.rs
src/components/: AssetManager.tsx  ConfigTweaks.tsx  GameUserSettingsTweaks.tsx  Hitsounds.tsx  Home.tsx  ModTools.tsx  Mods.tsx  PakIniEditor.tsx  PakManager.tsx  PakTweaks.tsx  QuickSettings.tsx  ScalabilityEditor.tsx  ScalabilitySettings.tsx  ScalabilityTweaks.tsx  Settings.tsx  SettingsEditor.tsx  Sounds.tsx  Titlebar.tsx  UpdateAvailableDialog.tsx
src/components/sounds/: SoundRow.tsx  slot.ts
src/components/ui/: alert-dialog.tsx  badge.tsx  button.tsx  checkbox.tsx  context-menu.tsx  input.tsx  popover.tsx  progress.tsx  select.tsx  separator.tsx  (+2 more)
src/hooks/: useGameRunning.ts  useSaveHotkeys.ts  useScrollAtBottom.ts  useUpdateCheck.ts
src/lib/: modsEvents.ts  pakEvents.ts  tweakProfileEvents.ts
