[package]
name = "oinkers-editor"
version = "0.1.0"
description = "A Tauri App"
authors = ["Zander"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "oinkers_editor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
repak = { git = "https://github.com/natimerry/repak-rivals", branch = "master" }
aes = "0.8.4"
hex = "0.4"
walkdir = "2"
winreg = "0.52"

[profile.release]
opt-level = 3
lto = "thin"
strip = true

