[package]
name = "oinkers-toolkit"
version = "0.5.0"
description = "Toolkit for Marvel Rivals configuration and mod files"
authors = ["Zander"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "oinkers_toolkit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
repak = { git = "https://github.com/oZanderr/repak", branch = "master", features = ["oodle"] }
rebnk = { git = "https://github.com/oZanderr/rebnk", branch = "master" }
retoc = { git = "https://github.com/oZanderr/retoc", branch = "master" }
aes = "0.8.4"
hex = "0.4"
walkdir = "2"
winreg = "0.52"
dirs = "5"
zip = { version = "8.2.0", default-features = false, features = ["deflate"] }
blake3 = "1"
rayon = "1"

[profile.release]
opt-level = 3
lto = "thin"
strip = true
